--- a/date/2025-08/index.htm
+++ b/date/2025-08/index.htm
@@ -114,6 +114,62 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="xcblog-blog-list">
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-08-31">
+                                <div class="col-md-3">
+                                    <a href="/news/article-150909.htm" class="xcblog-blog-url">
+                                        <img alt="深度解析 Shadowrocket PP 2019：从入门到精通的完整指南" src="/uploads/20241210/2af9f03fabb1b81a60645001221a2a6b.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-150909.htm" class="xcblog-blog-url">
+                                        <h3>
+                                            深度解析 Shadowrocket PP 2019：从入门到精通的完整指南                                        </h3>
+                                    </a>
+                                    <p>在当今数字化时代，网络安全和隐私保护已成为每个互联网用户不可忽视的重要议题。作为iOS平台上广受好评的代理工具，Shadowrocket PP 2019凭借其强大的功能和灵活的配置选项，为用户提供了安</p>
+                                </div>
+                            </div>
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-08-30">
+                                <div class="col-md-3">
+                                    <a href="/news/article-150472.htm" class="xcblog-blog-url">
+                                        <img alt="打开全球网络大门：PC端免费科学上网软件全面指南与实用技巧" src="/uploads/20241210/8a6a1f3dd48451d20f1ffdfa167c468a.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-150472.htm" class="xcblog-blog-url">
+                                        <h3>
+                                            打开全球网络大门：PC端免费科学上网软件全面指南与实用技巧                                        </h3>
+                                    </a>
+                                    <p>在全球互联网飞速发展的今天，信息的自由流通早已成为现代生活的一部分。但对于部分地区的用户来说，访问YouTube、Google、X、Facebook等国际主流网站却仍是一种“奢侈”。这正是“科学上网”</p>
+                                </div>
+                            </div>
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-08-29">
+                                <div class="col-md-3">
+                                    <a href="/news/article-150126.htm" class="xcblog-blog-url">
+                                        <img alt="美区Quantumult下架风波：网络自由与监管博弈下的用户生存指南" src="/uploads/20241210/6b18702a1149bc1ba84e0a626adfefc3.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-150126.htm" class="xcblog-blog-url">
+                                        <h3>
+                                            美区Quantumult下架风波：网络自由与监管博弈下的用户生存指南                                        </h3>
+                                    </a>
+                                    <p>引言：当一款工具突然消失  2023年，美区App Store悄然下架了备受技术爱好者推崇的网络工具Quantumult，这一事件在数字游民和跨境工作者群体中引发轩然大波。这款集成了智能分流、多协议支</p>
+                                </div>
+                            </div>
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-08-28">
+                                <div class="col-md-3">
+                                    <a href="/news/article-149862.htm" class="xcblog-blog-url">
+                                        <img alt="解密Clash：从全名解析到精通配置的科学上网指南" src="/uploads/20241210/6e11f7f57f20340ae4a1af340dad7851.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-149862.htm" class="xcblog-blog-url">
+                                        <h3>
+                                            解密Clash：从全名解析到精通配置的科学上网指南                                        </h3>
+                                    </a>
+                                    <p>引言：数字时代的网络自由钥匙  当互联网成为现代社会的"第五元素"，科学上网工具便如同数字世界的通行证。在众多代理工具中，Clash以其跨平台兼容性和高度可定制性脱颖而出——它不仅是技术极客的利器，更</p>
+                                </div>
+                            </div>
                                                         <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-08-27">
                                 <div class="col-md-3">
                                     <a href="/news/article-149376.htm" class="xcblog-blog-url">
@@ -198,64 +254,8 @@
                                     <p>引言：互联网时代的隐私守护者  在信息爆炸的今天，网络已成为我们生活中不可或缺的一部分。然而，随之而来的网络安全威胁和隐私泄露问题也日益严峻。据统计，全球每年因网络攻击造成的经济损失高达数万亿美元。在</p>
                                 </div>
                             </div>
-                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-08-21">
-                                <div class="col-md-3">
-                                    <a href="/news/article-147422.htm" class="xcblog-blog-url">
-                                        <img alt="水下角斗场：揭秘鱼类冲突背后的生存博弈与生态智慧" src="/uploads/20241210/8a6a1f3dd48451d20f1ffdfa167c468a.webp" class="img-responsive">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/news/article-147422.htm" class="xcblog-blog-url">
-                                        <h3>
-                                            水下角斗场：揭秘鱼类冲突背后的生存博弈与生态智慧                                        </h3>
-                                    </a>
-                                    <p>引言：被忽视的水下战争  当人们凝视波光粼粼的水面时，很少意识到水下正上演着比陆地更古老的生存戏剧。鱼类——这些演化历史超过5亿年的古老生物，通过鳞片间的碰撞、色彩信号的博弈以及精妙的社会策略，构建了</p>
-                                </div>
-                            </div>
-                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-08-21">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-8-21-clash-stash-node.htm" class="xcblog-blog-url">
-                                        <img alt="梯子机场 - 8月21日18.4M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐" src="/uploads/20240808/0b560c21df5ba31bd0278a963ae49ed8.webp" class="img-responsive">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-8-21-clash-stash-node.htm" class="xcblog-blog-url">
-                                        <h3>
-                                            梯子机场 - 8月21日18.4M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐                                        </h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了香港、加拿大、韩国、新加坡、日本、欧洲、美国等地区,最高速度可达18.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-08-20">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-8-20-clash-verge-rev-github.htm" class="xcblog-blog-url">
-                                        <img alt="梯子机场 - 8月20日20M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐" src="/uploads/20240808/08dfe757e4334b8938bc05571932ec01.webp" class="img-responsive">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-8-20-clash-verge-rev-github.htm" class="xcblog-blog-url">
-                                        <h3>
-                                            梯子机场 - 8月20日20M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐                                        </h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了韩国、香港、欧洲、美国、加拿大、新加坡、日本等地区,最高速度可达20 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-08-19">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-8-19-clash-node.htm" class="xcblog-blog-url">
-                                        <img alt="梯子机场 - 8月19日22.9M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐" src="/uploads/20240808/a56502512b8aa2a101f21c552eba3153.webp" class="img-responsive">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-8-19-clash-node.htm" class="xcblog-blog-url">
-                                        <h3>
-                                            梯子机场 - 8月19日22.9M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐                                        </h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了日本、香港、韩国、欧洲、新加坡、加拿大、美国等地区,最高速度可达22.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
                             
-                            <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/date/2025-08/page-2.htm">2</a></li><li><a href="/date/2025-08/page-3.htm">3</a></li> <li><a href="/date/2025-08/page-2.htm">&raquo;</a></li></ul>                        </div>
+                            <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/date/2025-08/page-2.htm">2</a></li><li><a href="/date/2025-08/page-3.htm">3</a></li><li><a href="/date/2025-08/page-4.htm">4</a></li> <li><a href="/date/2025-08/page-2.htm">&raquo;</a></li></ul>                        </div>
                     </div>
                     <div class="col-md-3">
                         <div class="panel panel-default">
@@ -264,16 +264,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-7-17-clash-verge-rev-node-github.htm" title="梯子机场 - 7月17日18.4M/S|免费V2ray/SSR/Clash/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 7月17日18.4M/S|免费V2ray/SSR/Clash/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-13-clash-node.htm" title="梯子机场 - 8月13日18.1M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月13日18.1M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-23-clash-node.htm" title="梯子机场 - 7月23日21.8M/S|免费SSR/Shadowrocket/Clash/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 7月23日21.8M/S|免费SSR/Shadowrocket/Clash/V2ray节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-26-clash-verge-rev-nodes.htm" title="梯子机场 - 7月26日18.9M/S|免费SSR/V2ray/Shadowrocket/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月26日18.9M/S|免费SSR/V2ray/Shadowrocket/Clash节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-25-clash-verge-rev-node-share.htm" title="梯子机场 - 7月25日21.3M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 7月25日21.3M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-18-clash-v2ray-ss-ssr.htm" title="梯子机场 - 7月18日19.7M/S|免费Clash/SSR/Shadowrocket/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 7月18日19.7M/S|免费Clash/SSR/Shadowrocket/V2ray节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-12-clash-stash.htm" title="梯子机场 - 8月12日20.4M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月12日20.4M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-27-clash-verge-rev-windows.htm" title="梯子机场 - 7月27日20M/S|免费V2ray/Shadowrocket/SSR/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月27日20M/S|免费V2ray/Shadowrocket/SSR/Clash节点推荐，VPN节点购买推荐</a></li>
                         <li class="py-2"><a href="/news/article-148667.htm" title="解锁游戏新境界：PS4上部署V2RayNG的全方位指南">解锁游戏新境界：PS4上部署V2RayNG的全方位指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-31-clash-verge-rev-node.htm" title="梯子机场 - 7月31日21.8M/S|免费Shadowrocket/V2ray/SSR/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月31日21.8M/S|免费Shadowrocket/V2ray/SSR/Clash节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-24-clash-verge-rev-nodes.htm" title="梯子机场 - 7月24日19.8M/S|免费V2ray/Shadowrocket/SSR/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月24日19.8M/S|免费V2ray/Shadowrocket/SSR/Clash节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-30-clash-verge-rev-node-github.htm" title="梯子机场 - 7月30日18.8M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 7月30日18.8M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-28-clash-node-daily-updates.htm" title="梯子机场 - 7月28日21.9M/S|免费SSR/V2ray/Clash/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 7月28日21.9M/S|免费SSR/V2ray/Clash/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-147991.htm" title="全面解析蓝灯安卓版：科学上网的便捷之选">全面解析蓝灯安卓版：科学上网的便捷之选</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-9-clash-stash.htm" title="梯子机场 - 8月9日18.7M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐">梯子机场 - 8月9日18.7M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-1-clash-verge-rev-node-share.htm" title="梯子机场 - 8月1日18.3M/S|免费SSR/Shadowrocket/Clash/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月1日18.3M/S|免费SSR/Shadowrocket/Clash/V2ray节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-151533.htm" title="Kali科学上网浏览器全方位使用指南：打造安全高速的翻墙上网体验">Kali科学上网浏览器全方位使用指南：打造安全高速的翻墙上网体验</a></li>
+                        <li class="py-2"><a href="/news/article-147673.htm" title="深入探索Clash官方网站：从入门到精通的全方位使用指南">深入探索Clash官方网站：从入门到精通的全方位使用指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-21-clash-stash-node.htm" title="梯子机场 - 7月21日21.3M/S|免费SSR/Clash/V2ray/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 7月21日21.3M/S|免费SSR/Clash/V2ray/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -285,7 +285,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">32</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">25</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
