--- a/index.html
+++ b/index.html
@@ -114,6 +114,96 @@
                     <div class="col-md-9">
                         <h2 class="mb-3">最近更新文章</h2>
                         <div class="xcblog-blog-list">
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-09-02">
+                                <div class="col-md-3">
+                                    <a href="/news/article-151533.htm" class="xcblog-blog-url">
+                                        <img alt="Kali科学上网浏览器全方位使用指南：打造安全高速的翻墙上网体验" src="/uploads/20241210/be6eaa28e1f0795d2c157b28e0544cfc.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-151533.htm" class="xcblog-blog-url">
+                                        <h3 class="xcblog-blog-title">
+                                            Kali科学上网浏览器全方位使用指南：打造安全高速的翻墙上网体验                                        </h3>
+                                    </a>
+                                    <p>
+                                        在当今信息高速流通的互联网时代，科学上网成为越来越多用户的刚需。特别是在某些网络环境受限的地区，访问国际网站、使用国外服务常常面临阻碍。作为应对这种限制的利器之一，Kali科学上网浏览器凭借其强大的功                                    </p>
+                                </div>
+                            </div>
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-09-01">
+                                <div class="col-md-3">
+                                    <a href="/news/article-151200.htm" class="xcblog-blog-url">
+                                        <img alt="突破网络边界：云主机科学上网终极指南与深度解析" src="/uploads/20241210/4dabb136cc879161edd380c9f5160f0f.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-151200.htm" class="xcblog-blog-url">
+                                        <h3 class="xcblog-blog-title">
+                                            突破网络边界：云主机科学上网终极指南与深度解析                                        </h3>
+                                    </a>
+                                    <p>
+                                        引言：当围墙遇见云端  在这个信息即权力的时代，全球互联网却日益呈现"巴尔干化"趋势。据最新《全球互联网自由度报告》显示，超过40个国家存在明显的网络审查现象，而中国"防火长城"（GFW）更被视为世界                                    </p>
+                                </div>
+                            </div>
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-08-31">
+                                <div class="col-md-3">
+                                    <a href="/news/article-150909.htm" class="xcblog-blog-url">
+                                        <img alt="深度解析 Shadowrocket PP 2019：从入门到精通的完整指南" src="/uploads/20241210/2af9f03fabb1b81a60645001221a2a6b.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-150909.htm" class="xcblog-blog-url">
+                                        <h3 class="xcblog-blog-title">
+                                            深度解析 Shadowrocket PP 2019：从入门到精通的完整指南                                        </h3>
+                                    </a>
+                                    <p>
+                                        在当今数字化时代，网络安全和隐私保护已成为每个互联网用户不可忽视的重要议题。作为iOS平台上广受好评的代理工具，Shadowrocket PP 2019凭借其强大的功能和灵活的配置选项，为用户提供了安                                    </p>
+                                </div>
+                            </div>
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-08-30">
+                                <div class="col-md-3">
+                                    <a href="/news/article-150472.htm" class="xcblog-blog-url">
+                                        <img alt="打开全球网络大门：PC端免费科学上网软件全面指南与实用技巧" src="/uploads/20241210/8a6a1f3dd48451d20f1ffdfa167c468a.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-150472.htm" class="xcblog-blog-url">
+                                        <h3 class="xcblog-blog-title">
+                                            打开全球网络大门：PC端免费科学上网软件全面指南与实用技巧                                        </h3>
+                                    </a>
+                                    <p>
+                                        在全球互联网飞速发展的今天，信息的自由流通早已成为现代生活的一部分。但对于部分地区的用户来说，访问YouTube、Google、X、Facebook等国际主流网站却仍是一种“奢侈”。这正是“科学上网”                                    </p>
+                                </div>
+                            </div>
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-08-29">
+                                <div class="col-md-3">
+                                    <a href="/news/article-150126.htm" class="xcblog-blog-url">
+                                        <img alt="美区Quantumult下架风波：网络自由与监管博弈下的用户生存指南" src="/uploads/20241210/6b18702a1149bc1ba84e0a626adfefc3.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-150126.htm" class="xcblog-blog-url">
+                                        <h3 class="xcblog-blog-title">
+                                            美区Quantumult下架风波：网络自由与监管博弈下的用户生存指南                                        </h3>
+                                    </a>
+                                    <p>
+                                        引言：当一款工具突然消失  2023年，美区App Store悄然下架了备受技术爱好者推崇的网络工具Quantumult，这一事件在数字游民和跨境工作者群体中引发轩然大波。这款集成了智能分流、多协议支                                    </p>
+                                </div>
+                            </div>
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-08-28">
+                                <div class="col-md-3">
+                                    <a href="/news/article-149862.htm" class="xcblog-blog-url">
+                                        <img alt="解密Clash：从全名解析到精通配置的科学上网指南" src="/uploads/20241210/6e11f7f57f20340ae4a1af340dad7851.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-149862.htm" class="xcblog-blog-url">
+                                        <h3 class="xcblog-blog-title">
+                                            解密Clash：从全名解析到精通配置的科学上网指南                                        </h3>
+                                    </a>
+                                    <p>
+                                        引言：数字时代的网络自由钥匙  当互联网成为现代社会的"第五元素"，科学上网工具便如同数字世界的通行证。在众多代理工具中，Clash以其跨平台兼容性和高度可定制性脱颖而出——它不仅是技术极客的利器，更                                    </p>
+                                </div>
+                            </div>
                                                         <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-08-27">
                                 <div class="col-md-3">
                                     <a href="/news/article-149376.htm" class="xcblog-blog-url">
@@ -228,16 +318,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-7-7-clash-verge-rev-windows.htm" title="梯子机场 - 7月7日20.5M/S|免费SSR/Clash/V2ray/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 7月7日20.5M/S|免费SSR/Clash/V2ray/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-5-clash-verge-rev-github.htm" title="梯子机场 - 8月5日18.8M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月5日18.8M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-11-clash-verge-rev-nodes.htm" title="梯子机场 - 7月11日18.1M/S|免费SSR/Shadowrocket/V2ray/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月11日18.1M/S|免费SSR/Shadowrocket/V2ray/Clash节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-9-clash-node.htm" title="梯子机场 - 7月9日22.6M/S|免费Clash/SSR/Shadowrocket/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 7月9日22.6M/S|免费Clash/SSR/Shadowrocket/V2ray节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-147991.htm" title="全面解析蓝灯安卓版：科学上网的便捷之选">全面解析蓝灯安卓版：科学上网的便捷之选</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-17-clash-node-github.htm" title="梯子机场 - 8月17日18.7M/S|免费Shadowrocket/Clash/SSR/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月17日18.7M/S|免费Shadowrocket/Clash/SSR/V2ray节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-13-clash-verge-rev-github.htm" title="梯子机场 - 7月13日22.7M/S|免费SSR/V2ray/Shadowrocket/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月13日22.7M/S|免费SSR/V2ray/Shadowrocket/Clash节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-4-node-share.htm" title="梯子机场 - 8月4日21.2M/S|免费Shadowrocket/Clash/V2ray/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月4日21.2M/S|免费Shadowrocket/Clash/V2ray/SSR节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-16-clash-v2ray-ss-ssr.htm" title="梯子机场 - 7月16日21.2M/S|免费Shadowrocket/V2ray/SSR/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月16日21.2M/S|免费Shadowrocket/V2ray/SSR/Clash节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-2-clash-verge-rev-node.htm" title="梯子机场 - 8月2日22.8M/S|免费Clash/Shadowrocket/V2ray/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月2日22.8M/S|免费Clash/Shadowrocket/V2ray/SSR节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-19-clash-node.htm" title="梯子机场 - 8月19日22.9M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月19日22.9M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-6-node-share.htm" title="梯子机场 - 7月6日18.8M/S|免费SSR/V2ray/Shadowrocket/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月6日18.8M/S|免费SSR/V2ray/Shadowrocket/Clash节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-8-node-share.htm" title="梯子机场 - 8月8日22.5M/S|免费Clash/Shadowrocket/SSR/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月8日22.5M/S|免费Clash/Shadowrocket/SSR/V2ray节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-151533.htm" title="Kali科学上网浏览器全方位使用指南：打造安全高速的翻墙上网体验">Kali科学上网浏览器全方位使用指南：打造安全高速的翻墙上网体验</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-7-free-node-subscribe.htm" title="梯子机场 - 8月7日21.9M/S|免费Clash/SSR/Shadowrocket/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月7日21.9M/S|免费Clash/SSR/Shadowrocket/V2ray节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-148374.htm" title="群晖路由器：解锁网络自由的智能网关">群晖路由器：解锁网络自由的智能网关</a></li>
-                        <li class="py-2"><a href="/news/article-147673.htm" title="深入探索Clash官方网站：从入门到精通的全方位使用指南">深入探索Clash官方网站：从入门到精通的全方位使用指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-28-clash-node-daily-updates.htm" title="梯子机场 - 7月28日21.9M/S|免费SSR/V2ray/Clash/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 7月28日21.9M/S|免费SSR/V2ray/Clash/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-149099.htm" title="突破连接限制：全方位解决Clash机场设备过多难题">突破连接限制：全方位解决Clash机场设备过多难题</a></li>
                     </ul>
     </div>
 </div>
@@ -249,7 +339,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">32</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">25</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
