--- a/date/2025-07/page-2.htm
+++ b/date/2025-07/page-2.htm
@@ -264,16 +264,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-8-5-clash-verge-rev-github.htm" title="梯子机场 - 8月5日18.8M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月5日18.8M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-23-clash-node.htm" title="梯子机场 - 7月23日21.8M/S|免费SSR/Shadowrocket/Clash/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 7月23日21.8M/S|免费SSR/Shadowrocket/Clash/V2ray节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-14-clash-node-github.htm" title="梯子机场 - 7月14日19M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月14日19M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-20-clash-verge-rev-github.htm" title="梯子机场 - 8月20日20M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐">梯子机场 - 8月20日20M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-6-node-share.htm" title="梯子机场 - 7月6日18.8M/S|免费SSR/V2ray/Shadowrocket/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月6日18.8M/S|免费SSR/V2ray/Shadowrocket/Clash节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-7-clash-verge-rev-windows.htm" title="梯子机场 - 7月7日20.5M/S|免费SSR/Clash/V2ray/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 7月7日20.5M/S|免费SSR/Clash/V2ray/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-147422.htm" title="水下角斗场：揭秘鱼类冲突背后的生存博弈与生态智慧">水下角斗场：揭秘鱼类冲突背后的生存博弈与生态智慧</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-3-clash-verge-rev-github.htm" title="梯子机场 - 8月3日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月3日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-8-clash-v2ray-ss-ssr.htm" title="梯子机场 - 7月8日19.3M/S|免费SSR/Shadowrocket/V2ray/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月8日19.3M/S|免费SSR/Shadowrocket/V2ray/Clash节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-147991.htm" title="全面解析蓝灯安卓版：科学上网的便捷之选">全面解析蓝灯安卓版：科学上网的便捷之选</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-9-clash-node.htm" title="梯子机场 - 7月9日22.6M/S|免费Clash/SSR/Shadowrocket/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 7月9日22.6M/S|免费Clash/SSR/Shadowrocket/V2ray节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-27-clash-verge-rev-windows.htm" title="梯子机场 - 7月27日20M/S|免费V2ray/Shadowrocket/SSR/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月27日20M/S|免费V2ray/Shadowrocket/SSR/Clash节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-19-clash-node-daily-updates.htm" title="梯子机场 - 7月19日22.9M/S|免费SSR/V2ray/Shadowrocket/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月19日22.9M/S|免费SSR/V2ray/Shadowrocket/Clash节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-21-clash-stash-node.htm" title="梯子机场 - 7月21日21.3M/S|免费SSR/Clash/V2ray/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 7月21日21.3M/S|免费SSR/Clash/V2ray/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-148374.htm" title="群晖路由器：解锁网络自由的智能网关">群晖路由器：解锁网络自由的智能网关</a></li>
+                        <li class="py-2"><a href="/news/article-150126.htm" title="美区Quantumult下架风波：网络自由与监管博弈下的用户生存指南">美区Quantumult下架风波：网络自由与监管博弈下的用户生存指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-1-clash-verge-rev-node-share.htm" title="梯子机场 - 8月1日18.3M/S|免费SSR/Shadowrocket/Clash/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月1日18.3M/S|免费SSR/Shadowrocket/Clash/V2ray节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-13-clash-node.htm" title="梯子机场 - 8月13日18.1M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月13日18.1M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-4-node-share.htm" title="梯子机场 - 8月4日21.2M/S|免费Shadowrocket/Clash/V2ray/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月4日21.2M/S|免费Shadowrocket/Clash/V2ray/SSR节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-19-clash-node.htm" title="梯子机场 - 8月19日22.9M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月19日22.9M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -285,7 +285,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">32</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">25</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
