--- a/date/2025-07/page-3.htm
+++ b/date/2025-07/page-3.htm
@@ -194,16 +194,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-8-7-free-node-subscribe.htm" title="梯子机场 - 8月7日21.9M/S|免费Clash/SSR/Shadowrocket/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月7日21.9M/S|免费Clash/SSR/Shadowrocket/V2ray节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-10-clash-meta-github.htm" title="梯子机场 - 8月10日22.9M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月10日22.9M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-9-clash-node.htm" title="梯子机场 - 7月9日22.6M/S|免费Clash/SSR/Shadowrocket/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 7月9日22.6M/S|免费Clash/SSR/Shadowrocket/V2ray节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-11-clash-verge-rev-nodes.htm" title="梯子机场 - 7月11日18.1M/S|免费SSR/Shadowrocket/V2ray/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月11日18.1M/S|免费SSR/Shadowrocket/V2ray/Clash节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-20-clash-verge-rev-nodes.htm" title="梯子机场 - 7月20日19.2M/S|免费SSR/V2ray/Shadowrocket/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月20日19.2M/S|免费SSR/V2ray/Shadowrocket/Clash节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-19-clash-node.htm" title="梯子机场 - 8月19日22.9M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月19日22.9M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-27-clash-verge-rev-windows.htm" title="梯子机场 - 7月27日20M/S|免费V2ray/Shadowrocket/SSR/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月27日20M/S|免费V2ray/Shadowrocket/SSR/Clash节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-6-node-share.htm" title="梯子机场 - 7月6日18.8M/S|免费SSR/V2ray/Shadowrocket/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月6日18.8M/S|免费SSR/V2ray/Shadowrocket/Clash节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-12-clash-stash.htm" title="梯子机场 - 8月12日20.4M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月12日20.4M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-31-clash-verge-rev-node.htm" title="梯子机场 - 7月31日21.8M/S|免费Shadowrocket/V2ray/SSR/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月31日21.8M/S|免费Shadowrocket/V2ray/SSR/Clash节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-1-clash-verge-rev-node-share.htm" title="梯子机场 - 8月1日18.3M/S|免费SSR/Shadowrocket/Clash/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月1日18.3M/S|免费SSR/Shadowrocket/Clash/V2ray节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-16-clash-verge-rev-nodes.htm" title="梯子机场 - 8月16日22.4M/S|免费Clash/V2ray/SSR/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月16日22.4M/S|免费Clash/V2ray/SSR/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-7-8-clash-v2ray-ss-ssr.htm" title="梯子机场 - 7月8日19.3M/S|免费SSR/Shadowrocket/V2ray/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月8日19.3M/S|免费SSR/Shadowrocket/V2ray/Clash节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-15-clash-verge-rev-github.htm" title="梯子机场 - 7月15日21M/S|免费SSR/Shadowrocket/Clash/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 7月15日21M/S|免费SSR/Shadowrocket/Clash/V2ray节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-14-clash-node-github.htm" title="梯子机场 - 7月14日19M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月14日19M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-16-clash-v2ray-ss-ssr.htm" title="梯子机场 - 7月16日21.2M/S|免费Shadowrocket/V2ray/SSR/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月16日21.2M/S|免费Shadowrocket/V2ray/SSR/Clash节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-3-clash-verge-rev-github.htm" title="梯子机场 - 8月3日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月3日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-17-clash-verge-rev-node-github.htm" title="梯子机场 - 7月17日18.4M/S|免费V2ray/SSR/Clash/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 7月17日18.4M/S|免费V2ray/SSR/Clash/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-149099.htm" title="突破连接限制：全方位解决Clash机场设备过多难题">突破连接限制：全方位解决Clash机场设备过多难题</a></li>
                     </ul>
     </div>
 </div>
@@ -215,7 +215,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">32</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">25</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
