--- a/date/2025-09/index.htm
+++ b/date/2025-09/index.htm
@@ -5,18 +5,18 @@
         <link rel="canonical" href="https://topproxy.github.io" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>免责申明 - 顶级代理服务器 免费订阅中文网</title>
-        <meta name="keywords" content="免责申明 - 顶级代理服务器 免费订阅中文网" />
-        <meta name="description" content="免责申明 - 顶级代理服务器 免费订阅中文网" />
+    <title>2025-09归档 - 顶级代理服务器 免费订阅中文网</title>
+        <meta name="keywords" content="2025-09归档顶级代理服务器 免费订阅中文网" />
+        <meta name="description" content="2025-09归档，当前是第1页" />
         <link rel="icon" href="/assets/website/img/v2raysubscribe/favicon.ico" type="image/x-icon"/>
 
     <meta name="author" content="顶级代理服务器 免费订阅中文网">
     <meta property="og:type" content="webpage" />
     <meta property="og:url" content="https://topproxy.github.io" />
     <meta property="og:site_name" content="顶级代理服务器 免费订阅中文网" />
-    <meta property="og:title" content="免责申明 - 顶级代理服务器 免费订阅中文网" />
+    <meta property="og:title" content="2025-09归档 - 顶级代理服务器 免费订阅中文网" />
     <meta property="og:image" content="/assets/website/img/v2raysubscribe/favicon.ico" />
-        <meta property="og:description" content="免责申明 - 顶级代理服务器 免费订阅中文网" />
+        <meta property="og:description" content="2025-09归档，当前是第1页" />
         
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -28,7 +28,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="免责申明 - 顶级代理服务器 免费订阅中文网">
+    <meta name="apple-mobile-web-app-title" content="2025-09归档 - 顶级代理服务器 免费订阅中文网">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -71,7 +71,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3332997411212854" crossorigin="anonymous"></script>
 </head>
 
-<body data-page="newly_discovered_nodes">
+<body data-page="category">
     <div id="all">
             <!-- navbar-->
     <header class="header">
@@ -100,9 +100,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h1>免责申明</h1>
+                        <h1>2025-09 归档</h1>
                         <p class="weight-300">
-                            <a href="/">首页</a> / 免责申明
+                            <a href="/">首页</a> / 2025-09 归档
                         </p>
                     </div>
                 </div>
@@ -113,27 +113,37 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-9">
-                        <p>本平台专注于为用户提供V2ray、Clash等免费节点订阅服务，我们致力于为用户提供便捷、高效的网络访问体验。然而，在使用本平台服务的过程中，用户需要了解并遵守以下免责条款：</p>
-<p>一、服务内容</p>
-<p>本平台提供的所有节点订阅服务均来源于公开信息或合作伙伴，我们不对节点信息的真实性、准确性、合法性以及可用性做任何明示或暗示的保证。用户在使用节点时，请自行判断并承担相关风险。</p>
-<p>二、网络安全</p>
-<p>本平台仅提供节点订阅服务，不参与用户的网络访问行为。用户在使用节点时，应自行负责网络访问的安全性和合法性，不得利用本平台提供的服务从事任何违法、违规或侵犯他人权益的行为。</p>
-<p>三、隐私保护</p>
-<p>我们尊重并保护用户的个人隐私，但用户在使用本平台服务时，可能需要提供部分个人信息以完成相关操作。我们承诺将严格按照相关法律法规的要求，对用户提供的个人信息进行保密处理，并采取相应的安全措施防止信息泄露。但请注意，由于网络环境的复杂性和不确定性，我们无法保证用户个人信息在传输过程中绝对安全，用户应自行承担因信息泄露而可能产生的风险。</p>
-<p>四、版权及知识产权</p>
-<p>本平台上的所有内容（包括但不限于文字、图片、视频等）均受版权及知识产权法律保护。用户在使用本平台服务时，应遵守相关法律法规，不得擅自复制、传播或用于其他商业用途。对于侵犯本平台版权及知识产权的行为，我们将依法追究法律责任。</p>
-<p>五、免责条款</p>
-<ol>
-    <li>因网络故障、服务器维护等原因导致服务中断或无法正常使用时，本平台不承担任何责任。</li>
-    <li>用户在使用本平台服务时，因个人操作不当或第三方因素导致的损失，本平台不承担任何赔偿责任。</li>
-    <li>本平台提供的节点订阅服务仅供参考，用户在使用过程中应自行判断并承担相关风险。对于因使用本平台服务而产生的任何直接或间接损失，本平台不承担任何责任。</li>
-</ol>
-<p>六、其他</p>
-<ol>
-    <li>本免责声明自发布之日起生效，并可能根据法律法规的变化或本平台服务的调整而进行修改。用户在使用本平台服务时，应定期查看并了解最新的免责声明内容。</li>
-    <li>对于本免责声明中未明确的事项，将按照相关法律法规的规定进行处理。如用户在使用本平台服务过程中遇到任何问题或争议，可通过本平台提供的联系方式与我们联系，我们将尽力为用户解决问题。</li>
-</ol>
-<p>总之，本平台将竭诚为用户提供优质的节点订阅服务，但用户在使用服务时应自行承担相关风险并遵守相关法律法规。我们希望与用户共同营造一个安全、和谐、合法的网络环境。</p>
+                        <div class="xcblog-blog-list">
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-09-02">
+                                <div class="col-md-3">
+                                    <a href="/news/article-151533.htm" class="xcblog-blog-url">
+                                        <img alt="Kali科学上网浏览器全方位使用指南：打造安全高速的翻墙上网体验" src="/uploads/20241210/be6eaa28e1f0795d2c157b28e0544cfc.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-151533.htm" class="xcblog-blog-url">
+                                        <h3>
+                                            Kali科学上网浏览器全方位使用指南：打造安全高速的翻墙上网体验                                        </h3>
+                                    </a>
+                                    <p>在当今信息高速流通的互联网时代，科学上网成为越来越多用户的刚需。特别是在某些网络环境受限的地区，访问国际网站、使用国外服务常常面临阻碍。作为应对这种限制的利器之一，Kali科学上网浏览器凭借其强大的功</p>
+                                </div>
+                            </div>
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-09-01">
+                                <div class="col-md-3">
+                                    <a href="/news/article-151200.htm" class="xcblog-blog-url">
+                                        <img alt="突破网络边界：云主机科学上网终极指南与深度解析" src="/uploads/20241210/4dabb136cc879161edd380c9f5160f0f.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/news/article-151200.htm" class="xcblog-blog-url">
+                                        <h3>
+                                            突破网络边界：云主机科学上网终极指南与深度解析                                        </h3>
+                                    </a>
+                                    <p>引言：当围墙遇见云端  在这个信息即权力的时代，全球互联网却日益呈现"巴尔干化"趋势。据最新《全球互联网自由度报告》显示，超过40个国家存在明显的网络审查现象，而中国"防火长城"（GFW）更被视为世界</p>
+                                </div>
+                            </div>
+                            
+                                                    </div>
                     </div>
                     <div class="col-md-3">
                         <div class="panel panel-default">
@@ -142,16 +152,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-151533.htm" title="Kali科学上网浏览器全方位使用指南：打造安全高速的翻墙上网体验">Kali科学上网浏览器全方位使用指南：打造安全高速的翻墙上网体验</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-7-13-clash-verge-rev-github.htm" title="梯子机场 - 7月13日22.7M/S|免费SSR/V2ray/Shadowrocket/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月13日22.7M/S|免费SSR/V2ray/Shadowrocket/Clash节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-148667.htm" title="解锁游戏新境界：PS4上部署V2RayNG的全方位指南">解锁游戏新境界：PS4上部署V2RayNG的全方位指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-5-clash-verge-rev-github.htm" title="梯子机场 - 8月5日18.8M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月5日18.8M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-18-clash-stash-node.htm" title="梯子机场 - 8月18日22.4M/S|免费V2ray/Clash/SSR/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月18日22.4M/S|免费V2ray/Clash/SSR/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-22-clash-verge-rev-node.htm" title="梯子机场 - 7月22日18.8M/S|免费Shadowrocket/V2ray/SSR/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月22日18.8M/S|免费Shadowrocket/V2ray/SSR/Clash节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-151533.htm" title="Kali科学上网浏览器全方位使用指南：打造安全高速的翻墙上网体验">Kali科学上网浏览器全方位使用指南：打造安全高速的翻墙上网体验</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-7-9-clash-node.htm" title="梯子机场 - 7月9日22.6M/S|免费Clash/SSR/Shadowrocket/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 7月9日22.6M/S|免费Clash/SSR/Shadowrocket/V2ray节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-18-clash-v2ray-ss-ssr.htm" title="梯子机场 - 7月18日19.7M/S|免费Clash/SSR/Shadowrocket/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 7月18日19.7M/S|免费Clash/SSR/Shadowrocket/V2ray节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-1-clash-verge-rev-node-share.htm" title="梯子机场 - 8月1日18.3M/S|免费SSR/Shadowrocket/Clash/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月1日18.3M/S|免费SSR/Shadowrocket/Clash/V2ray节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-19-clash-node-daily-updates.htm" title="梯子机场 - 7月19日22.9M/S|免费SSR/V2ray/Shadowrocket/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月19日22.9M/S|免费SSR/V2ray/Shadowrocket/Clash节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-7-clash-verge-rev-windows.htm" title="梯子机场 - 7月7日20.5M/S|免费SSR/Clash/V2ray/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 7月7日20.5M/S|免费SSR/Clash/V2ray/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-147991.htm" title="全面解析蓝灯安卓版：科学上网的便捷之选">全面解析蓝灯安卓版：科学上网的便捷之选</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-14-clash-meta-github.htm" title="梯子机场 - 8月14日20.9M/S|免费V2ray/Clash/SSR/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月14日20.9M/S|免费V2ray/Clash/SSR/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-28-clash-node-daily-updates.htm" title="梯子机场 - 7月28日21.9M/S|免费SSR/V2ray/Clash/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 7月28日21.9M/S|免费SSR/V2ray/Clash/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-149862.htm" title="解密Clash：从全名解析到精通配置的科学上网指南">解密Clash：从全名解析到精通配置的科学上网指南</a></li>
+                        <li class="py-2"><a href="/news/article-149376.htm" title="全面攻克Clash订阅更新失败：从诊断到预防的完整指南">全面攻克Clash订阅更新失败：从诊断到预防的完整指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-7-20-clash-verge-rev-nodes.htm" title="梯子机场 - 7月20日19.2M/S|免费SSR/V2ray/Shadowrocket/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月20日19.2M/S|免费SSR/V2ray/Shadowrocket/Clash节点推荐，VPN节点购买推荐</a></li>
                     </ul>
     </div>
 </div>
